Fix Spacing in the card

--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,6 @@
   --Slightly-transparent-white2: hsla(0, 0%, 100%, 0.6); /* (stat headings) */
 }
 
-/* - Font size: 15px */
-/* Inter 400, 700 */
-/* Lexend Deca 400 */
-
 *,
 *::before,
 *::after {
@@ -26,7 +22,6 @@ html {
 
 body {
   font-family: "Inter", serif;
-  line-height: 1.4;
 }
 
 img {
@@ -49,14 +44,14 @@ main {
   background-color: var(--Dark-desaturated-blue);
   width: 90%;
   max-width: 1110px;
-  /* height: 450px; */
+  height: 450px;
   border-radius: 10px;
   overflow: hidden;
 }
 
 .card__content {
   width: 50%;
-  padding: 5rem 11rem 5rem 6rem;
+  padding: 7rem 10rem 7rem 7rem;
 }
 
 .card__content h1 {
@@ -85,6 +80,7 @@ main {
 .card__content .stats h2 {
   color: var(--White);
   font-size: 2.2rem;
+  margin-bottom: 0.5rem;
 }
 
 .card__content .stats p {
@@ -119,6 +115,7 @@ main {
   }
   .card {
     flex-direction: column-reverse;
+    height: auto;
   }
 
   .card__content {
@@ -139,10 +136,6 @@ main {
     flex-direction: column;
     gap: 3rem;
     width: 100%;
-  }
-
-  .card__content .stats h2 {
-    margin-bottom: 0.5rem;
   }
 
   .card__image {
